<resources>
    <string name="about_buglinks">Please report bugs on to &lt;a href=&quot;mailto:InstrMusicApp@gmail.com">InstrMusicApp@gmail.com&lt;/a>. We will take a look at it.</string>
    <string name="about_copyright" translatable="false">© Guilherme Franco &amp; Marina Martins</string>
    <string name="app_name">InstrMusic</string>
    <string name="welcome_back">Sign in to continue</string>
    <string name="nome">Username</string>
    <string name="conf_pass">Confirm Password</string>
    <string name="password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="email">Email</string>
    <string name="sensor_inclination">Inclination</string>
    <string name="sensor_accelerometer">Accelerometer</string>
    <string name="sensor_magnetic_field">Magnetic Field</string>
    <string name="sensor_orientation">Orientation</string>
    <string name="sensor_gyroscope">Gyroscope</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_pressure">Pressure</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_proximity">Proximity</string>
    <string name="sensor_gravity">Gravity</string>
    <string name="sensor_linear_acceleration">Linear Acceleration</string>
    <string name="sensor_rotation_vector">Rotation Vector</string>
    <string name="sensor_relative_humidity">Relative Humidity</string>
    <string name="sensor_ambient_temperature">Ambient Temperature</string>
    <string name="sensor_magnetic_field_uncalibrated">Magnetic Field (uncalibrated)</string>
    <string name="sensor_game_rotation_vector">Game Rotation Vector (uncalibrated)</string>
    <string name="sensor_gyroscope_uncalibrated">Gyroscope (uncalibrated)</string>
    <string name="sensor_significant_motion">Significant Motion</string>
    <string name="sensor_step_counter">Step Counter</string>
    <string name="sensor_step_detector">Step Detector</string>
    <string name="sensor_geomagnetic_rotation_vector">Geomagnetic Rotation Vector</string>
    <string name="sensor_heartrate">Heartrate</string>
    <string name="sensor_tilt_detector">Tilt Detector</string>
    <string name="sensor_wake_gesture">Wake Gesture</string>
    <string name="sensor_glance_gesture">Glance Gesture</string>
    <string name="sensor_pick_up_gesture">Pick Up Gesture</string>
    <string name="guide_max_range">Max range</string>
    <string name="guide_resolution">Resolution</string>
    <string name="guide_osc_address">OSC address</string>
    <string name="sensor_wrist_tilt_gesture">Wrist Tilt Gesture</string>
    <string name="about_license_javaosc">&lt;a href=&quot;http://www.illposed.com/software/javaosc.html&quot;>JavaOSC&lt;/a>, license can be found at &lt;a href=&quot;https://github.com/hoijui/JavaOSC/blob/master/LICENSE.md&quot;>https://github.com/hoijui/JavaOSC/blob/master/LICENSE.md&lt;/a>.</string>
    <string name="about_license_sensor2osc">&lt;a href=&quot;https://sensors2.org/osc/&quot;>Sensor2OSC&lt;/a>, license can be found at &lt;a href=&quot;https://github.com/SensorApps/Sensors2OSC/blob/master/LICENSE&quot;>https://github.com/SensorApps/Sensors2OSC/blob/master/LICENSE&lt;/a>.</string>
    <string name="guide_dimensions">Number of values</string>
    <string name="help">Help</string>
    <string name="text_guide_floatlist">Sensor values are sent as a list of float values. Depending on the sensor, this can range from 1 to 16 values.</string>
    <string name="text_guide">Depending on your phone, you have several sensors and values available.</string>
    <string name="sensor_nfc">Near Field Communication</string>
    <string name="available_sensors">Available Sensors</string>
    <string name="text_guide_multitouch">If you enable multitouch, each touchpoint will send its coordinates via OSC. The address is in the format /touch&lt;index&gt;, where index is a 1-based. The coordinates are sent as a list of 2 float values, X and Y and range from 0 to 1.</string>
    <string name="text_guide_multitouch_headline">Multitouch</string>
    <string name="text_guide_nfc">If your phone can read NFC tokens, then the value of these tokens will be sent to the OSC address /nfc.</string>
    <string name="text_guide_nfc_headline">Near Field Communication (NFC)</string>
    <string name="available_sounds">Available Sounds</string>
    <string name="send_data">Send data</string>
    <string name="slide_menu_up">slide menu up</string>
    <string name="sensor_option">sensor_option</string>
    <string name="your_favorites">Your Favorites</string>
    <string name="save_current_selection">Save current selection</string>
    <string name="profile">Profile</string>
    <string name="emailProfile">Email</string>
    <string name="UsernameProfile">Username</string>
    <string name="PasswordProfile">Password</string>
    <string name="ConfirmProfile">ConfirmProfile</string>
    <string name="delete_account">Delete Account</string>
    <string name="add_room">Add room</string>


</resources>