<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:background="#5d515e"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="16dp"
              android:paddingLeft="16dp"
              android:paddingRight="16dp">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/guideHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/textViewGuide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/textListGuide"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_floatlist"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/availSensorsHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_sensors"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/sensor_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="0dp" />


            <TextView
                android:id="@+id/nfcHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_nfc_headline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/nfcText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_nfc"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/mutitouchHeadline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_multitouch_headline"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/multitouchText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_guide_multitouch"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="visible"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>