<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#5d515e"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/guideHeadline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"/>

    <LinearLayout
        android:id="@+id/text_welcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="#917294"
        android:textSize="30sp"
        android:textStyle="bold"
        >

        <TextView
            android:id="@+id/profileImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/round_perm_identity_24"
            app:layout_constraintBottom_toBottomOf="@+id/profile"
            app:layout_constraintEnd_toEndOf="@+id/profile"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="@+id/profile"
            app:layout_constraintTop_toTopOf="@+id/profile"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.533" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailProfile"
            android:textSize="500sp"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#fff" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_nome"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/UsernameProfile"
            android:textSize="500sp"
            app:boxStrokeColor="#fff">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#fff" />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PasswordProfile"
            android:textSize="500sp"
            app:boxStrokeColor="#fff"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reg_conf_pass"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ConfirmProfile"
            android:textSize="500sp"
            app:boxStrokeColor="#fff"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="#917294"
        android:text="Save changes"
        app:backgroundTint="@null" />




</LinearLayout>