<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B296B5"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".auth.Login">

    <ImageView
        android:id="@+id/barras"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/barras"
        android:transitionName="logo_barras" />

    <ImageView
        android:id="@+id/nome"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo_name"
        android:transitionName="logo_nome" />

    <TextView
        android:id="@+id/text_welcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_back"
        android:textAlignment="center"
        android:textColor="#917294"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:textSize="500sp"
            app:boxStrokeColor="#fff">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#fff" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="#fff"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:onClick="onForgotPass"
            android:text="@string/forget_password"
            android:textAlignment="textEnd"
            android:textSize="12sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/goToHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#917294"
            android:text="GO"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/goToSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="New User? SIGN UP"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>